[package]
name = "wbg-rand"
version = "0.4.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/wbg-rand"
homepage = "https://github.com/alexcrichton/wbg-rand"
documentation = "https://docs.rs/wbg-rand"
description = """
Random numbers and and RNG for wasm32-unknown-unknown using `#[wasm_bindgen]`
"""

[dependencies]
wasm-bindgen = "0.2"
rand = "0.4"
lazy_static = "1.0"
